--- a/html/menu.html
+++ b/html/menu.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Demo</title>
+    <link rel="stylesheet" href="./styles/mystyles.css">
+    <!-- internal style sheet -->
+    <!-- <style>
+        h2, h3,h4{
+            background-color:aquamarine;
+            font-family: Arial, Helvetica, sans-serif;            
+        }
+        h2{
+            color:blue;
+        }
+        h3{
+            color:green
+        }
+        h4{
+            color:red
+        }
+    </style> -->
 </head>
 <body>
     <a href="https://www.google.com/" target="_blank">Visit Google</a><br/>
@@ -48,7 +65,8 @@ This opportunity marks Presidio’s second coding challenge, targeting dynamic e
             </ul>        
         </li>
         <li>
-            <h4>Part III – Bonus Section (Optional):</h4>
+            <!-- inline style sheet -->
+            <h4 style="color:blueviolet">Part III – Bonus Section (Optional):</h4>
             <ul>
                 <li>
                     <b>Objective:</b> Go above and beyond by tackling additional challenges.
@@ -96,3 +114,14 @@ Presidio is an outstanding place to work because of our bright, inquisitive, har
     </ol>
 </body>
 </html>
+<!-- CSS types  Cascading Style Sheet  enhancing beauty to your page
+
+1. Inline style sheet
+2. Internal style sheet
+3. External style sheet  -->
+
+Formating priority :
+1. Inline
+2. Internal
+3. External
+4. Browser default
